# 8051-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  definitions.c  definitions.h  emulator.c  emulator.h  interface.c  interface.h  main.c  window.c  window.h
utils/: set.c  set.h
